--- a/OurCocktails/Components/Layout/NavMenu.razor
+++ b/OurCocktails/Components/Layout/NavMenu.razor
@@ -21,6 +21,13 @@
                 </svg> Drinks
             </NavLink>
         </div>
+        <div class="menu-item">
+            <NavLink class="nav-link" href="drink/new/">
+                <svg class="bi" viewBox="0 0 16 16">
+                    <polygon stroke="none" stroke-width="0" fill="#FFFFFF" points="6,1 6,6 1,6 1,10 6,10 6,15 10,15 10,10 15,10 15,6 10,6 10,1"></polygon>
+                </svg> Add Drink
+            </NavLink>
+        </div>
     </nav>
 </div>
 
