--- a/OurCocktails/Components/_Imports.razor
+++ b/OurCocktails/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using OurCocktails.Repositories
 @using OurCocktails.Shared.Models
 @using OurCocktails.Shared.Repositories
+@using OurCocktails.DataBase
