Use correct name when drink is loaded.

--- a/OurCocktails.Client/Pages/DrinkDetailsPage.razor
+++ b/OurCocktails.Client/Pages/DrinkDetailsPage.razor
@@ -4,7 +4,7 @@
 @inject IStorage Storage
 @inject PersistentComponentState PersistentComponentState
 
-<PageTitle>Our Cocktails - @IgnoredName</PageTitle>
+<PageTitle>Our Cocktails - @(drink?.Name ?? IgnoredName)</PageTitle>
 
 <h2>
     @if (drink is null)
