--- a/OurCocktails/Components/_Imports.razor
+++ b/OurCocktails/Components/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using OurCocktails
 @using OurCocktails.Client
+@using OurCocktails.Client.Components
 @using OurCocktails.Components
 @using OurCocktails.Components.Shared
 @using OurCocktails.Repositories
